<resources>
    <!-- General -->
    <string name="app_name" translatable="false">Tag Management App</string>
    <string name="nav_header_title" translatable="false">Tag Management App</string>
    <string name="nav_header_subtitle" translatable="false">proyectofidelitas09@gmail.com</string>
    <string name="title_activity_principal" translatable="false">ActivityPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_contacts">Contact</string>
    <string name="nav_close_session">Close session</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_App">Welcome to app</string>

    <!-- Login -->
    <string name="ID">ID:</string>
    <string name="ID_hint">Enter your ID</string>
    <string name="Email_label">Email</string>
    <string name="Email_hint">Enter your email</string>
    <string name="Password">Password</string>
    <string name="ForgotPassword">Forgot your password?</string>
    <string name="Password_hint">Enter your password</string>
    <string name="Register">Register</string>
    <string name="login_successful">Login successful</string>

    <!-- Register -->
    <string name="Name">Name</string>
    <string name="LastName">Last Name</string>

    <!-- Contact -->
    <string name="Contact_send_mail">Send email</string>
    <string name="Contact">Contact:</string>
    <string name="Contact_label">Do you have any problems? Do you have any questions? Please let us know!</string>
    <string name="Contact_no_app">No apps where found to send the email</string>
    <string name="Contact_number" translatable="false">50688888888</string>
    <string name="Contact_email_subject">Feedback</string>
    <string name="Contact_email_message">Hello! I have feedback to report.</string>
    <string name="Contact_email" translatable="false">proyectofidelitas09@gmail.com</string>

    <!-- Buttons -->
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="btn_call">Call</string>
    <string name="btn_send_email">Send email</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_close_session">Close session</string>
    <string name="btn_add">Add</string>
    <string name="btn_find">Find</string>
    <string name="btn_clean">Clean</string>
    <string name="btn_SendPassword">Send password</string>
    <string name="btn_createAccount">Create account</string>
    <string name="btn_download">Download</string>
    <string name="btn_upload">Upload</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_storage">Tag Images</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_tag">Tags</string>
    <string name="menu_list">Tag List</string>

    <!-- Tag -->
    <string name="tag_id">ID</string>
    <string name="tag_color">Color</string>
    <string name="tag_operator_name">Operator name</string>
    <string name="tag_production_line">Production line</string>
    <string name="tag_description">Description</string>
    <string name="tag_emission_date">Emission date</string>
    <string name="tag_close_date">Close date</string>
    <string name="tag_id_hint">Write tag id</string>
    <string name="tag_color_hint">Write tag color</string>
    <string name="tag_operator_name_hint">Write operator name</string>
    <string name="tag_production_line_hint">Write production line</string>
    <string name="tag_description_hint">Write description</string>
    <string name="tag_emission_date_hint">Write emission date</string>
    <string name="tag_close_date_hint">Write close date</string>
    <string name="tag_add">Added information</string>
    <string name="tag_fail">Operation failed</string>
    <string name="tag_success">Success</string>
    <string name="tag_remove">Information deleted</string>
    <string name="tag_not_found">Information not found</string>
    <string name="tag_incomplete_data">Please complete all fields</string>
    <string name="tag_invalid_date">Close date can\'t be older than emission date</string>
    <string-array name="TAG_spinner_options">
        <item>Red (report a flaw)</item>
        <item>Blue (quality assurance)</item>
        <item>Green (improvement)</item>
    </string-array>
    <string-array name="tag_colors" translatable="false">
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
    </string-array>

    <!--  Storage -->
    <string name="Storage_Image_name">Image name </string>
    <string name="Storage_Image_name_hint">Write an image name </string>
    <string name="Storage_Image_selection">Please select an image </string>
    <string name="Storage_Image_load_fail">Image load failed </string>
    <string name="Storage_upload_progress">Upload Progress </string>
    <string name="Storage_upload">Upload successful </string>
    <string name="Storage_upload_fail">Upload failed </string>
    <string name="Storage_download">Download successful </string>
    <string name="Storage_download_fail">Download failed </string>

    <!-- Close session -->
    <string name="close_session_click">Click the button below to close the current session</string>
    <string name="close_session_log_out">Disconnecting</string>

    <!-- Toast messages -->
    <string name="toast_email_sent">Email sent</string>
    <string name="toast_wrong">Something went wrong</string>

    <!-- Home -->
    <string name="home_title">Welcome to Tag Management App!</string>
    <string name="home_paragraph">Tag Management App is an application for the administration of faults, quality assurance and improvements.</string>
</resources>