<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_storage"
            android:icon="@drawable/ic_menu_storage"
            android:title="@string/menu_storage" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contacts"
            android:title="@string/menu_contact" />

        <item
            android:id="@+id/nav_tag"
            android:icon="@drawable/ic_tag"
            android:title="@string/menu_tag" />

        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_recyclerview"
            android:title="@string/menu_list" />

        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_salir"
            android:title="@string/nav_close_session" />

    </group>
</menu>