<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sc703.etiquetas_kotlin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_storage"
        android:name="com.sc703.etiquetas_kotlin.ui.storage.StorageFragment"
        android:label="@string/menu_storage"
        tools:layout="@layout/fragment_storage" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.sc703.etiquetas_kotlin.ui.contacto.CotactoFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_cotacto" />

    <fragment
        android:id="@+id/nav_tag"
        android:name="com.sc703.etiquetas_kotlin.ui.etiqueta.EtiquetaFragment"
        android:label="@string/menu_tag"
        tools:layout="@layout/fragment_etiqueta" />

    <fragment
        android:id="@+id/nav_list"
        android:name="com.sc703.etiquetas_kotlin.ui.list.ListFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/nav_salir"
        android:name="com.sc703.etiquetas_kotlin.ui.salir.SalirFragment"
        android:label="@string/nav_close_session"
        tools:layout="@layout/fragment_salir" />

</navigation>