<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/tag_no_color"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="97dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag_id" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag_operator_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag_production_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag_description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag_emission_date" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag_close_date" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="2.5"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-" />

            <TextView
                android:id="@+id/tv_item_operator_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-" />

            <TextView
                android:id="@+id/tv_item_production_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-" />

            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-" />

            <TextView
                android:id="@+id/tv_item_emission_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-" />

            <TextView
                android:id="@+id/tv_item_close_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="203dp"
            android:layout_height="match_parent"
            android:layout_weight="7.5"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="7.5"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_item_delete"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/ic_delete"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5px"
        android:background="@android:color/darker_gray"/>
</LinearLayout>